fix map image scroll at bottom, add collapsibility to navbar

--- a/photo_mapper/static/css/photo_mapper.css
+++ b/photo_mapper/static/css/photo_mapper.css
@@ -25,17 +25,13 @@ html {
 }
 
 .mapToggler {
-  float: right;
-  margin: 10px;
+  margin: 10px 30px 10px 10px;
   padding: 10px;
-  clear: right;
 }
 
 .mapCanvas { 
-  height: 100%;
-  margin: 5px;
-/*  margin-left: 130px;
-*/  width: auto;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 .mapCanvas * {
@@ -43,7 +39,6 @@ html {
 }
 
 .logo {
-  float: left;
   margin: 5px 5px 5px 10px;  
 }
 
@@ -56,3 +51,4 @@ body {
     padding-top: 0px;
   }
 }*/
+
